# odr-check

./: .gitignore  ASTsTagDeclVisitor.cpp  ASTsTagDeclVisitor.h  CMakeLists.txt  DeclContextChainsComparer.cpp  DeclContextChainsComparer.h  DeclContextComparer.cpp  DeclContextComparer.h  LICENSE  OdrCheck.cpp  OdrCheckASTMerger.cpp  OdrCheckASTMerger.h  OdrCheckAction.cpp  OdrCheckAction.h  OdrCheckActionFactory.h  OdrCheckTool.cpp  OdrCheckTool.h  OdrViolationsScanner.cpp  OdrViolationsScanner.h  README.md
data/: build.sh  configure_cmake.sh  odr_check.sh  odr_check2.sh  run_tests.sh
data/src/: CMakeLists.txt  ClangOdrCheckToolchain.cmake  boost.cpp  h1.h  h2.h  linker-wrapper.py  m1.cpp  m2.cpp  m3.cpp  m4.cpp  main.cpp  no_default.cpp  simple_template_struct.cpp  simple_template_struct2.cpp  string_literal1.cpp  string_literal2.cpp
odr-check/: CMakeLists.txt  DeclContextChainsComparer.h  OdrCheck.cpp  OdrCheckActionFactory.cpp  OdrViolationsScanner.cpp  OdrViolationsScanner.h
odr-violation-samples/: CMakeLists.txt  class1.cpp  class2.cpp  enum1.cpp  enum2.cpp  pack1.cpp  pack2.cpp
plugin/: CMakeLists.txt  OdrCheckPlugin.cpp
